# chaotic-nick-names

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/skills/add-name-category/: SKILL.md
.claude/skills/add-name-category/scripts/: splice_category.py
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: firearms-category.md
docs/superpowers/plans/: 2026-05-17-resilient-category-scraper.md
docs/superpowers/specs/: 2026-05-17-resilient-category-scraper-design.md
migrations/: 001_initial.sql  002_feedback.sql  003_undelivered_summaries.sql
src/: categories.json  data.rs  db.rs  logging.rs  main.rs  state.rs
src/commands/: categories.rs  context_menu.rs  feedback.rs  history.rs  mod.rs  nick.rs  perms.rs  randomize.rs  randomize_delivery.rs  reset.rs  restore.rs  stats.rs
tests/: test_clean.py  test_extract.py  test_scrape.py
