[package]
name = "chaotic-nick-names"
version = "0.1.0"
edition = "2021"
description = "A Discord bot that assigns chaotic nicknames from various categories"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
